<resources>
    <string name="app_name">Android_laba7</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_alpha">alpha</string>
    <string name="label_red">red</string>
    <string name="label_green">green</string>
    <string name="label_blue">blue</string>

    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>

    <string name="line_imageview_description">This displays the line thickness</string>

    <string name="menu_item_delete">Erase Drawing</string>
    <string name="menu_item_line_width">Line Width</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_print">Print</string>
    <string name="menu_item_color">color</string>

    <string name="message_erase">Erase the drawing?</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_saved">You saved painting can be viewed in the Photos app by selecting Device Folders from that app\'s menu</string>
    <string name="message_error_printing">Your device does not support printing</string>

    <string name="permission_explanation">To save an image, the app requires permission to write to external storage</string>

    <string name="title_color_dialog">Choose Color</string>
    <string name="title_line_width_dialog">Choose Line Width</string>
</resources>