<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color"
        android:icon="@drawable/palette"
        android:title="@string/menu_item_color"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/line_width"
        android:icon="@drawable/brush"
        android:title="@string/menu_item_line_width"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_drawing"
        android:icon="@drawable/delete"
        android:title="@string/menu_item_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/save"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/print"
        android:icon="@drawable/print"
        android:title="@string/menu_item_print"
        app:showAsAction="ifRoom" />

</menu>