<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/color_dialog_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/color_text_alpha"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="end"
        android:text="@string/label_alpha" />

    <SeekBar
        android:id="@+id/color_seekbar_alpha"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:id="@+id/color_text_red"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="end"
        android:text="@string/label_red" />

    <SeekBar
        android:id="@+id/color_seekbar_red"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:id="@+id/color_text_green"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="end"
        android:text="@string/label_green" />

    <SeekBar
        android:id="@+id/color_seekbar_green"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255" />

    <TextView
        android:id="@+id/color_text_blue"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="end"
        android:text="@string/label_blue" />

    <SeekBar
        android:id="@+id/color_seekbar_blue"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" />

    <View
        android:id="@+id/color_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

</GridLayout>